grammar.js
    source_file: $ =>
      prec.left(
        repeat(
          choice(
            $.package,
            $.fragment,
            $._dollar,
          ),
        ),
      ),

    _line_terminator: $ => seq(optional('\r'), '\n'),

    fragment: $ =>
      prec.left(seq(repeat1(seq($._top_level_statement, $._line_terminator)), optional($._dollar))),

    _dollar: $ => token(seq('$', optional('\r'), '\n')),

    block: $ =>
      prec.left(
        seq(alias(/_block/i, '_block'), optional($.label), optional($._codeblock), alias(/_endblock/i, '_endblock')),
      ),

    assignment: $ =>
      prec.left(PREC.ASSIGN,
        seq($._expression,
          choice('<<', '^<<', '_and<<', '_andif<<', '_or<<', '_orif<<', '_xor<<', '**<<', '**^<<', '*<<', '*^<<', '/<<', '/^<<', '_mod<<', '_div<<', '-<<', '-^<<', '+<<', '+^<<'),
          $._expression),
      ),

    // _if <condition1>
    // _then
    //  <block body>
    // [ _elif <condition2>
    //   _then
    //     <block body> ]
    //     ...
    // [ _else
    //   <block body> ]
    // _endif
    loop: $ =>
      seq(
        alias(/_loop/i, '_loop'),
        optional($.label),
        optional($._codeblock),
        alias(/_endloop/i, '_endloop'),
      ),

    // [ _finally [ _with <lvalue tuple> ]
    //  <block body> ]
    finally: $ => seq(alias(/_finally/i, '_finally'), optional(seq(alias(/_with/i, '_with'), $._identifier_list)), optional($._codeblock)),

    // _handling condition _with procedure
    catch: $ => seq(alias(/_catch/i, '_catch'), $._expression, $._terminator, optional($._codeblock), alias(/_endcatch/i, '_endcatch')),

    // _throw <expression> [ _with <rvalue tuple> ]
    iterator: $ =>
      seq(
        optional(seq(alias(/_for/i, '_for'), $._identifier_list)),
        alias(/_over/i, '_over'), $._expression,
        seq(
          alias(/_loop/i, '_loop'),
          optional($.label),
          optional($._codeblock),
          optional($.finally),
          alias(/_endloop/i, '_endloop')),
      ),

    // _while <condition>
    // _loop [ @<identifier> ]
    //  <block body>
    // _endloop
    while: $ =>
      seq(alias(/_while/i, '_while'), field('condition', $._expression),
        seq(
          alias(/_loop/i, '_loop'),
          optional($.label),
          optional($._codeblock),
          alias(/_endloop/i, '_endloop')),
      ),

    // _try [ _with <name list> ]
    //   <block body 0>
    // _when <name list1>
    //   <block body 1>
    // _endtry
    loopbody: $ =>
      seq(
        alias(/_loopbody/i, '_loopbody'),
        '(', seq($._expression, repeat(seq(',', $._expression))), ')',
      ),

    // _leave [ @ <identifier> ] [_with <rvalue tuple> ]
    leave: $ =>
      prec.left(seq(
        alias(/_leave/i, '_leave'),
        optional($.label),
        optional(seq(alias(/_with/i, '_with'), choice(
          seq('(', seq($._expression, repeat1(seq(',', $._expression))), ')'),
          seq($._expression, repeat(seq(',', $._expression)))))),
      )),

    // _continue _with <rvalue tuple>
    continue: $ =>
      prec.left(seq(
        alias(/_continue/i, '_continue'),
        optional($.label),
        optional(seq(alias(/_with/i, '_with'), choice(
          seq('(', seq($._expression, repeat1(seq(',', $._expression))), ')'),
          seq($._expression, repeat(seq(',', $._expression)))))),
      )),

    // _protect [ _locking <expression> ]
    //   <block body>
    // _protection
    //   <block body>
    // _endprotect
    pragma: $ => prec.left(seq(alias(/_pragma/i, '_pragma'), /(.*)/)),

    character_literal: $ => seq('%', choice($._identifier, /./, ' ')),

    string_literal: $ =>
      choice(
        seq('"', repeat(choice(/[^"\n]/, /(.|\n)/)), '"'),
        seq('\'', repeat(choice(/[^'\n]/, /(.|\n)/)), '\''),
      ),

    // /<pattern>/<flags>
    regex_literal: $ => token(/\/.*?\/[qisdlmucx]*/),

    call: $ =>
      prec.right(PREC.CALL,
        seq(
          field('receiver', $._expression),
          field('operator', '.'),
          field('message', $.identifier),
          optional(choice(
            seq('(', optional($._expression_list), ')'),
            seq('<<', optional($._expression_list)))),
        ),
      ),

    invoke: $ => prec.right(PREC.CALL,
      seq(
        field('receiver', $._expression),
        seq('(', optional($._expression_list), ')')),
    ),

    _expression_list: $ =>
      prec.right(seq($._expression, repeat(seq(',', $._expression)))),

    true: $ => alias(/_true/i, '_true'),
    false: $ => alias(/_false/i, '_false'),
    maybe: $ => alias(/_maybe/i, '_maybe'),
    unset: $ => alias(/_unset/i, '_unset'),
    super: $ => alias(/_super/i, '_super'),
    self: $ => alias(/_self/i, '_self'),
    clone: $ => alias(/_clone/i, '_clone'),

    thisthread: $ => alias(/_thisthread/i, '_thisthread'),

    class: $ => seq(alias(/_class/i, '_class'), field('java_classname', /\|[\p{L}\p{N}._]*\|/u)),

    _terminator: $ =>
      choice(';', $._line_terminator),

    _top_level_statement: $ => choice(
      $._definition,
      $._method_declaration,
      $._expression,
      $._global_assignment,
    ),

    _expression: $ => choice(
      $.handling,
      $.return,
      $.leave,
      $.continue,
      $.catch,
      $.throw,
      $.primitive,
      $.block,
      $.iterator,
      $.while,
      $.if,
      $.loop,
      $.try,
      $.loopbody,
      $.protect,
      $.lock,
      choice(
        $.parenthesized_expression,
        $.call,
        $.procedure,
        $.invoke,
        $.slot_accessor,
        $.indexed_access,
        $.gather,
        $.scatter,
        $.allresults,
        $.class,
        $.assignment,
        $.logical_operator,
        $.relational_operator,
        $.arithmetic_operator,
        $.unary_operator,
        $._literal,
        $._variable,
      ),
    ),

    _codeblock: $ => seq(
      choice($._expression, $._defvar),
      repeat(seq($._terminator, choice($._expression, $._defvar))),
      optional($._terminator)),

    global: $ => seq(alias(/_global/i, '_global'), choice($.identifier, $.global_variable, $.dynamic_variable), repeat(seq(',', choice($.identifier, $.global_variable, $.dynamic_variable)))),

    local: $ => prec.left(
      seq(alias(/_local/i, '_local'),
        choice(
          seq('(', seq($.identifier, optional(seq('<<', $._expression))), repeat(seq(',', seq($.identifier, optional(seq('<<', $._expression))))), ')'),
          seq('(', seq($.identifier, optional(seq('<<', $._expression))), repeat(seq(',', seq($.identifier, optional(seq('<<', $._expression))))), seq(optional(','), alias(/_gather/i, '_gather'), seq($.identifier, optional(seq('<<', $._expression)))), ')'),
          seq('(', seq(alias(/_gather/i, '_gather'), $.identifier, optional(seq('<<', $._expression))), ')'),
          seq(seq($.identifier, optional(seq('<<', $._expression))), repeat(seq(',', seq($.identifier, optional(seq('<<', $._expression))))))),
        optional(seq('<<', $._expression)))),

    constant: $ =>
      seq(
        choice(
          alias(/_constant/i, '_constant'),
          seq(alias(/_constant/i, '_constant'), alias(/_local/i, '_local')),
          seq(alias(/_local/i, '_local'), alias(/_constant/i, '_constant'))),
        choice(
          seq('(', $._identifier_list, ')'),
          $._identifier_list),
        seq('<<', $._expression)),

    dynamic: $ => seq(alias(/_dynamic/i, '_dynamic'), $.dynamic_variable, repeat(seq(',', $.dynamic_variable)), optional(seq('<<', $._expression))),

    import: $ => seq(alias(/_import/i, '_import'), $._identifier_list),

    dynamic_import: $ => seq(alias(/_dynamic/i, '_dynamic'), alias(/_import/i, '_import'), $.dynamic_variable, repeat(seq(',', $.dynamic_variable))),

    return: $ =>
      prec.right(
        choice(
          seq(alias(/_return/i, '_return'), optional($._expression_list)),
          seq('>>', $._expression_list),
        ),
      ),

    gather: $ => seq(alias(/_gather/i, '_gather'), $._expression),
    scatter: $ => seq(alias(/_scatter/i, '_scatter'), $._expression),
    allresults: $ => seq(alias(/_allresults/i, '_allresults'), $._expression),

    parenthesized_expression: $ => seq('(', $._expression_list, ')'),

    label: $ =>
      /@\s?(\|[\p{L}\p{N}_?.!]*\||[\p{L}\p{N}_?!]+)+/u,

    number: $ => token(
      choice(
        seq(
          choice(/\p{N}+/u, /\p{N}+\.\p{N}+/u),
          optional(seq(/[eE&][+-]?/, /\p{N}+/u))),
        /(?:[2-9]|[1-2]\d|3[0-6])[rR][a-zA-Z0-9]+/)),

    variable: $ => prec.left($._identifier),

    dynamic_variable: $ => token(
      choice(
        seq('!', /[\p{L}\p{N}_?!]+!/u),
        seq(ID_REGEX, ':', '!', /[\p{L}\p{N}_?!]+!/u),
        seq('|', '!', /[\p{L}\p{N}_?!]+/u, '!', '|'),
        seq('|!', /[\p{L}\p{N}_?!]+\|/u, '!'),
        seq('!', /\|[\p{L}\p{N}_?!]*\|/u, '!'),
      ),
    ),

    global_variable: $ => token(seq(ID_REGEX, ':', ID_REGEX)),

    global_reference: $ => token(seq('@', optional(seq(ID_REGEX, ':')), ID_REGEX)),

    identifier: $ => $._identifier,

    _identifier: $ => ID_REGEX,

    _identifier_list: $ =>
      prec.right(seq($.identifier, repeat(seq(',', $.identifier)))),

    vector: $ => seq(
      '{',
      optional($._expression_list),
      '}',
    ),

    relational_operator: $ =>
      prec.right(PREC.RELATIONAL,
        seq(
          field('left', $._expression),
          field('operator', choice(alias(/_is/i, '_is'), alias(/_isnt/i, '_isnt'), alias(/_cf/i, '_cf'), '=', '~=', '<>', '>=', '<=', '<', '>')),
          field('right', $._expression),
        ),
      ),

    unary_operator: $ =>
      prec.right(seq(field('operator', choice('+', '-', alias(/_not/i, '_not'), '~')), $._expression)),

    symbol: $ => /:(\|[^|]*\||\\.|[\p{L}\p{N}_?!]+)+/u,
