test/corpus/assignment.txt
================================================================================
assignment
================================================================================

a << 1
b ^<< 1
b ^ << 1
c +<< 1
c + << 1
d _orif<< a
d _orif << a
d _ORIF<< a
c _mod<< 1
c _MOD<< 1

--------------------------------------------------------------------------------

(source_file
  (fragment
    (assignment
      (variable)
      (number)))
  (fragment
    (assignment
      (variable)
      (number)))
  (fragment
    (assignment
      (variable)
      (number)))
  (fragment
    (assignment
      (variable)
      (number)))
  (fragment
    (assignment
      (variable)
      (number)))
  (fragment
    (assignment
      (variable)
      (variable)))
  (fragment
    (assignment
      (variable)
      (variable)))
  (fragment
    (assignment
      (variable)
      (variable)))
  (fragment
    (assignment
      (variable)
      (number)))
  (fragment
    (assignment
      (variable)
      (number))))
