test/corpus/class.txt
================================================================================
class
================================================================================

def_slotted_exemplar(:exemplar, {}, {}, {_class |com.gesmallworld.magik.language.MagikFinalisable|})
$

def_slotted_exemplar(:another_exemplar, {}, _unset, {_class |com.gesmallworld.magik.html5.MagikHTML5Component|})
$

def_slotted_exemplar(:exemplar, {}, {}, {_class |com.gesmallworld.magik.language.Straße|})
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (invoke
      (variable)
      (expression_list
        (symbol)
        (vector)
        (vector)
        (vector
          (expression_list
            (class))))))
  (fragment
    (invoke
      (variable)
      (expression_list
        (symbol)
        (vector)
        (unset)
        (vector
          (expression_list
            (class))))))
  (fragment
    (invoke
      (variable)
      (expression_list
        (symbol)
        (vector)
        (vector)
        (vector
          (expression_list
            (class)))))))
