test/corpus/method_invocation.txt
================================================================================
method calls
================================================================================

object.method
object.getName
object.|getName|
|Object|.|getName|
object.method()
object.method<< _unset
object.method1.method2
_self.new()
_super.new()
_clone.init()
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (call
      (variable)
      (identifier)))
  (fragment
    (call
      (variable)
      (identifier)))
  (fragment
    (call
      (variable)
      (identifier)))
  (fragment
    (call
      (variable)
      (identifier)))
  (fragment
    (call
      (variable)
      (identifier)))
  (fragment
    (call
      (variable)
      (identifier)
      (expression_list
        (unset))))
  (fragment
    (call
      (call
        (variable)
        (identifier))
      (identifier)))
  (fragment
    (call
      (self)
      (identifier)))
  (fragment
    (call
      (super)
      (identifier)))
  (fragment
    (call
      (clone)
      (identifier))))
