test/corpus/thisthread.txt
================================================================================
thisthread
================================================================================

_thisthread.sleep(10)

_thisthread.background_priority
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (call
      (thisthread)
      (identifier)
      (expression_list
        (number))))
  (fragment
    (call
      (thisthread)
      (identifier))))
