test/corpus/tuple.txt
================================================================================
tuple
================================================================================

(first, _gather rest) << roots(1, -6, -7, 60)
(i, j, k) << (_scatter rest)
(i, j, _gather k) << (_scatter rest)
(i, j, k, _gather rest) << (first, _scatter rootsvec)
rootsvec << _allresults roots(1, -6, -7, 60)
_scatter _allresults roots(1, -6, -7, 60)
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (assignment
      (parenthesized_expression
        (expression_list
          (variable)
          (gather
            (variable))))
      (invoke
        (variable)
        (expression_list
          (number)
          (unary_operator
            (number))
          (unary_operator
            (number))
          (number)))))
  (fragment
    (assignment
      (parenthesized_expression
        (expression_list
          (variable)
          (variable)
          (variable)))
      (parenthesized_expression
        (expression_list
          (scatter
            (variable))))))
  (fragment
    (assignment
      (parenthesized_expression
        (expression_list
          (variable)
          (variable)
          (gather
            (variable))))
      (parenthesized_expression
        (expression_list
          (scatter
            (variable))))))
  (fragment
    (assignment
      (parenthesized_expression
        (expression_list
          (variable)
          (variable)
          (variable)
          (gather
            (variable))))
      (parenthesized_expression
        (expression_list
          (variable)
          (scatter
            (variable))))))
  (fragment
    (assignment
      (variable)
      (allresults
        (invoke
          (variable)
          (expression_list
            (number)
            (unary_operator
              (number))
            (unary_operator
              (number))
            (number))))))
  (fragment
    (scatter
      (allresults
        (invoke
          (variable)
          (expression_list
            (number)
            (unary_operator
              (number))
            (unary_operator
              (number))
            (number)))))))
